--- a/Jade/test.pug
+++ b/Jade/test.pug
@@ -1,13 +1,17 @@
 doctype html
 html
   head
+    meta(charset="utf-8")
     title hello plug
   body
     h1#h1.H1.H2 pug pug
     h2(class="h2",id="h2") hello
     p(style="color:red;").
-      1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye
+      1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye<em>lalalala</em>
       1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye
       1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye
     a(href="javascript:;") lllll
     .div
+    //just test
+    input(type="text" value="请输入你的姓名")
+    input(type="checkbox" value="男" checked)
